--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="color: blue; background-color: yellow; border: 2px solid red ">Welcome to all</h1>
-   <h1>Malar</h1>
-   <h2>Tirunelveli</h2>
+    <h1 style="color:blue;background:rgb(255, 0, 221);">Welcome to My Web Page</h1>
+    <h1>Malar</h1>
+    <h2>Tirunelveli</h2>
 </body>
 </html>
